fix(select): fix select's placeholder when too long
affects: @varlet/ui

--- a/packages/varlet-ui/src/select/select.less
+++ b/packages/varlet-ui/src/select/select.less
@@ -91,6 +91,7 @@
     position: absolute;
     top: 50%;
     left: 0;
+    width: 100%;
     transform-origin: left;
     transition-property: top, transform;
     transition-duration: 0.3s;
@@ -135,6 +136,7 @@
 
   &--placeholder-hint {
     top: 0;
+    width: 133.33%;
     transform: translate(0, 0) scale(0.75);
   }
 
